--- a/frontend/my-react-app/src/components/Sidebar/Sidebar.css
+++ b/frontend/my-react-app/src/components/Sidebar/Sidebar.css
@@ -17,13 +17,13 @@ body, html {
   background-color: #121212;
   color: #ffffff;
   padding: 10px;
-  border: 3px solid #ffffff;
-  border-radius: 20px;
+  border: 2px solid #ffffff;
+  border-radius: 12px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   transform: translateX(-220px);
-  transition: transform 0.3s ease, width 0.3s ease;
+  transition: transform 0.2s ease, width 0.2s ease;
   z-index: 1500;
   overflow-y: auto;
 }
@@ -48,6 +48,7 @@ body, html {
   margin-bottom: 28px;
   color: #cc0000;
   text-align: center;
+  text-shadow: 1px 1px 0px #fff;
 }
 
 /* Sidebar List */
@@ -55,6 +56,7 @@ body, html {
   list-style-type: none;
   padding: 0;
   flex-grow: 1;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .sidebar-list li {
@@ -63,11 +65,12 @@ body, html {
 
 /* Standard Link */
 .sidebar-list li a {
-  color: #ffffff;
+  color: #E2DFD2;
   text-decoration: none;
   font-weight: bold;
   transition: color 0.3s ease, transform 0.1s ease;
   word-wrap: break-word;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .sidebar-list li a:hover {
@@ -121,16 +124,19 @@ body, html {
   padding-left: 20px;
   margin-top: 10px;
   transition: max-height 0.3s ease;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .group-sublist li {
   margin-bottom: 20px;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .group-sublist li a {
   color: #ffffff;
   text-decoration: none;
   transition: color 0.3s ease, transform 0.1s ease;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .group-sublist li a:hover {
@@ -170,11 +176,11 @@ body, html {
   left: 10px;
   z-index: 2001;
   background-color: #121212;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
   color: #cc0000;
-  padding: 12px;
-  font-size: 1.8rem;
+  padding: 10px;
+  font-size: 2.2rem;
   cursor: pointer;
   transition: left 0.3s ease, background-color 0.3s ease, padding 0.3s ease, font-size 0.3s ease;
   width: 50px;
@@ -200,6 +206,7 @@ body, html {
   .sidebar {
     width: 180px;
     transform: translateX(-180px);
+    font-size: 0.8rem
   }
   .sidebar:not(.collapsed) {
     transform: translateX(0);
@@ -232,26 +239,27 @@ body, html {
 /* Mobile Phones */
 @media (max-width: 480px) {
   .sidebar {
-    width: 160px;
-    transform: translateX(-160px);
+    width: 145px;
+    transform: translateX(-150px);
     border-radius: 0;
   }
   .sidebar:not(.collapsed) {
     transform: translateX(0);
   }
   .sidebar.collapsed {
-    transform: translateX(-160px);
+    transform: translateX(-145px);
   }
   .sidebar-title {
     font-size: 1.5em;
     margin-bottom: 20px;
+    margin-left: 40px;
   }
   .sidebar-toggle {
-    padding: 16px;
+    padding: 5px;
     font-size: 1.8rem;
-    width: 60px;
-    height: 60px;
-    line-height: 30px;
+    width: 40px;
+    height: 40px;
+    line-height: 20px;
   }
   .sidebar-logo-container {
     padding-bottom: 60px;
@@ -264,16 +272,43 @@ body, html {
   }
 }
 
-/* Logout Button */
-.logout-button {
-  background: none;
-  border: none;
-  color: #ff0000;
-  cursor: pointer;
-  padding: 0;
-  font-size: 1rem;
+/@media (max-width: 320px) {
+  .sidebar {
+    width: 120px;
+    transform: translateX(-120px);
+    border-radius: 0;
+  }
+  .sidebar:not(.collapsed) {
+    transform: translateX(0);
+  }
+  .sidebar.collapsed {
+    transform: translateX(-120px);
+  }
+
+  .sidebar-title {
+    font-size: 1.3em;
+    margin-bottom: 16px;
+    margin-left: 20px; /* Adjust if needed so title is visible */
+  }
+
+  .sidebar-toggle {
+    padding: 4px;
+    font-size: 1.4rem;
+    width: 35px;
+    height: 35px;
+    line-height: 18px;
+  }
+
+  .sidebar-logo {
+    max-width: 110px;
+  }
+  .sidebar-logo-container {
+    padding-bottom: 40px;
+  }
+
+  .group-sublist {
+    padding-left: 10px;
+  }
 }
-.logout-button:hover {
-  text-decoration: underline;
-}
+
 
